[tool.poetry]
name = "python-configuration-management"
version = "2.0.0"
description = "A merge conflict-less solution to committing an encrypted configuration to the repo with secrets and non-secrets side-by-side."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kicksaw-Consulting/python-configuration-management"
authors = ["Alex Drozd <alex@kicksaw.com>", "Tim Sabat <tim@kicksaw.com>", "Austin Burke <austin@kicksaw.com>"]
keywords = ["config", "secrets", "settings"]
packages = [
    { include = "pycm" }
]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
pyyaml = "^5.3.1"
cryptography = "^3.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
click = "^7.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
pycm = 'pycm.cli:pycm'
